--- a/main.tex
+++ b/main.tex
@@ -18,10 +18,15 @@
     $f=G(x_2)+c(x_1)$\\
     $f=G(x_1)+G(x_2)$\\
     $\sigma(xy)=G(\sigma(x))+G(\sigma(y))$\\
-    $\pd{\sigma(xy)}{x}|_{y=1}=\frac{d\sigma(x)}{dx}=\frac{dG(x_1)}{dx_1}\frac{dx_1}{dx}$\\
+    $\pd{\sigma(xy)}{x}|_{y=1}=\frac{d\sigma(x)}{dx}=\frac{dG(x_1)}{dx_1}\frac{dx_1}{dx}
         =\frac{dG(\sigma(x))}{d\sigma}\frac{d\sigma}{dx}$\\
     $\frac{dG(\sigma)}{d\sigma}=1$\\
     $G(\sigma)=\sigma+c$\\
-    $\sigma(xy)=\sigma(x)+\sigma(y)+c$\\
-    $c=-\sigma(1)$\\
+    $\sigma(xy)=\sigma(x)+\sigma(y)+2c$\\
+    $2c=-\sigma(1)$\\
+    $\sigma(1)=\sigma(1)+\sigma(1)+\sigma(1)+3c$\\
+    $3c=-2\sigma(1)$\\
+    $2c=\frac{3}{2}c$\\
+    $c=0$\\
+    
 \end{document}
