--- a/base/main.tex
+++ b/base/main.tex
@@ -22,17 +22,19 @@
 
 \newcommand{\bb}[1]{\textbf{#1}}
 \newcommand{\N}{\mathbb{N}}
+\newcommand{\R}{\mathbb{R}}
 \newcommand{\pder}[2]{\frac{\partial #1}{\partial #2}}
 \newcommand{\eval}[1]{\Big{|}_{#1}}
 
 \title{The additivity of ignorance}
-%\author{Tommaso Lamma}
-%\nodate
+\author{Tommaso Lamma}
 \begin{document}
 \maketitle
-\begin{prop*}{\bb{Additivity of ignorance}\\}
-Let $\sigma :\N\to[0,+\infty[$ be a possible ignorance function, if $\sigma(1)=0$ and $\sigma(xy)$ of type $f(\sigma(x),\sigma(y))$,\\ 
-where $f:[0,+\infty[\to[0,+\infty[$ is a differentiable function then $\sigma(xy)=\sigma(x)+\sigma(y)$.
+\begin{prop*}{\scshape Additivity of Ignorance\\}
+\bb{Nulla di tutto ciò è legale ma ora so usare latex}\\
+
+Let $\sigma :\N\to\R$  be a possible ignorance function, if $\sigma(1)=0$ and $\sigma(xy)=f(\sigma(x),\sigma(y))$,\\ 
+where $f:\R\to\R$  is a differentiable function, then $\sigma(xy)=\sigma(x)+\sigma(y)$.
 \end{prop*}
 \begin{proof}
 \begin{gather}
