--- a/geometric_deep_learning/graph.tex
+++ b/geometric_deep_learning/graph.tex
@@ -28,6 +28,7 @@
 \newcommand{\bb}[1]{\textbf{#1}}
 \newcommand{\eps}{\varepsilon}
 \newcommand{\N}{\mathbb{N}}
+\newcommand{\Z}{\mathbb{Z}}
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\pder}[2]{\frac{\partial #1}{\partial #2}}
 \newcommand{\eval}[1]{\Big{|}_{#1}}
@@ -76,12 +77,40 @@
             \sum_{i \in \mc{A}}\sum_{j \in \mc{A} : (i,j) \in \mc{E}} F_{ij} = \sum_{\partial_+^0 \mc{A}} F_{ij} + \sum_{(i,j) \in \mc{A}^2} adj(\mc{A})_{ij} F_{ij}$
 	    where since $adj(\mc{A})_{ij} = adj(\mc{A})_{ji}$ we have by renaming dummy indexes $adj(\mc{A})_{ij} F_{ij} = -adj(\mc{A})_{ij} F_{ij} = 0$.
         \end{proof}
+	\begin{figure}[h]
+	    \caption{Coboundary operator applied to A+B+C+D+E+F+U+V+W(green) and to A+B+C+D+E+F+U+V(green and red)}
+	    \centering
+            \includegraphics[scale = 0.3]{images/cobordo.jpg}
+	\end{figure}
+	
+	\begin{prop}
+	    The use of the coboundary operator makes sense only with antisimmetric functions on the edges, the antisimmetry of
+	    those function is somehow related to the orientation of surfaces.
+	\end{prop}
+	\begin{proof}
+	    $\sum_{\partial^0 \sum_{i \in \mc{A}} i}F_{ij} = \sum_{\sum_{i \in \mc{A}} \partial^0 i} F_{ij}$ if an edge
+	    is in the coboundary of two different vertexes of $\mc{A}$ it will be count twice, that means zero times in $\Z_2$,
+	    similarly for that same edge we would sum $F_{ij} + F_{ji} = 0$.
+	\end{proof}
+
     
         \begin{defn}
 	    \bb{Graph laplacian}\\
-	    Let $f \in L^2(\mc{V})$ we have that $\scal{gradf}{gradf}=\scal{div(gradf)}{f} =: \scal{\Delta f}{f} = \scal{f}{\Delta f}$, where
+	    Let $f \in L^2(\mc{V})$ we have that $\scal{gradf}{gradf} = \scal{div(gradf)}{f} =: \scal{\Delta f}{f} = \scal{f}{\Delta f}$, where
 	    $\Delta : L^2(\mc{V}) \to L^2(\mc{V})$ is the Laplacian.
 	\end{defn}
-    
+
+	Possibili approfondimenti interessanti:\\
+	(i)   Studio di equazioni differenziali sui grafi con gli operatori sopra definiti\\
+	      -Equazione del Calore\\
+	      $\frac{d(f_i)}{dt} = -c(\Delta f)_i$\\
+	      -Equazione di Schr$\ddot{o}$dinger\\
+	      $\frac{d(f_i)}{dt} = -c(\Delta f)_i + U_i f_i$\\
+	      -Equazione di Navier-Stokes\\
+	      -Equazione di continuità\\
+	      -altre\\
+	(ii)  Vincolare l'apprendimento di funzioni a divergenza nulla delle edge tramite $H^0$, eventuale applicazione a flussi incomprimibili\\
+	(iii) Definire il rotore per 2-simplessi e fare l'analogo con $H_1$, eventuale applicazione a reti elettriche tridimensionali\\
+
     \end{section}
 \end{document}
