--- a/geometric_deep_learning/graph.tex
+++ b/geometric_deep_learning/graph.tex
@@ -66,7 +66,7 @@
 	\end{proof}
 
 	\begin{thm}
-	    \bb{Gauss theorem}\\
+	    \bb{Fake Gauss theorem}\\
 	    Let $F \in L^2(\mc{E}) : F_{ij}=-F_{ji}$, let $\mc{A} \subset \mc{V}$ then if $a_i = w_{ij} = 1$ we have
 	    $\sum_{\mc{A}} (divF)_i = \sum_{\partial_+^0 \mc{A}} F_{ij}$.
 	\end{thm}
