--- a/geometric_deep_learning/main.tex
+++ b/geometric_deep_learning/main.tex
@@ -1,6 +1,6 @@
 \documentclass{article}
 \usepackage[utf8]{inputenc}
-%\usepackage{fouriernc}
+\usepackage{fouriernc}
 \usepackage[T1]{fontenc}
 \usepackage{adjustbox}
 \usepackage[margin=2cm]{geometry}
