--- a/geometric_deep_learning/sections/section2.tex
+++ b/geometric_deep_learning/sections/section2.tex
@@ -71,11 +71,11 @@ In realtà se avessi la certezza che il bordo di un complesso simpliciale 1D con
     \sum_{i \in \mc{A}}\sum_{j \in \mc{A} : (i,j) \in \mc{E}} F_{ij} = \sum_{\partial^0 \mc{A}} F_{ij} + \sum_{(i,j) \in \mc{A}^2} adj(\mc{A})_{ij} F_{ij}$
     where since $adj(\mc{A})_{ij} = adj(\mc{A})_{ji}$ we have by renaming dummy indexes $adj(\mc{A})_{ij} F_{ij} = -adj(\mc{A})_{ij} F_{ij} = 0$.
 \end{proof}
-\begin{figure}[h]
-    \caption{Coboundary operator applied to A+B+C+D+E+F+U+V+W(green) and to A+B+C+D+E+F+U+V(green and red)}
-    \centering
-    \includegraphics[scale = 0.3]{images/cobordo.jpg}
-\end{figure}
+%\begin{figure}[h]
+%    \caption{Coboundary operator applied to A+B+C+D+E+F+U+V+W(green) and to A+B+C+D+E+F+U+V(green and red)}
+%    \centering
+%    \includegraphics[scale = 0.3]{images/cobordo.jpg}
+%\end{figure}
 
 Aggiungere la formalizzazione del cobordo e del bordo tramite gli operatori, ridefinizione della divergenza con il cobordo del vertice
 	
