--- a/geometric_deep_learning/sections/section1.tex
+++ b/geometric_deep_learning/sections/section1.tex
@@ -64,6 +64,6 @@ then $|f(L_\tau(x))-f(x)|\approx |J_\tau|$ where $(J_\tau)_{ij}=(\pder{\tau_i}{\
 To be found...
 \end{proof}
 
-Aggiungere la struttura delle reti convoluzionali e la formula da minimizzare coi filtri di convoluzione
+%Aggiungere la struttura delle reti convoluzionali e la formula da minimizzare coi filtri di convoluzione, in generale un po' di deep learning.
 
 \end{document}
