--- a/geometric_deep_learning/sections/section2.tex
+++ b/geometric_deep_learning/sections/section2.tex
@@ -57,7 +57,7 @@
     Left to the reader...
 \end{proof}
 
-In realtà se avessi la certezza che il bordo di un complesso simpliciale 1D connesso è vuoto o due punti starei meglio, esiste un teorema? boh
+%In realtà se avessi la certezza che il bordo di un complesso simpliciale 1D connesso è vuoto o due punti starei meglio, esiste un teorema? boh
 
 \begin{thm}
     \underline{Gauss theorem on graphs}\\
@@ -77,8 +77,6 @@ In realtà se avessi la certezza che il bordo di un complesso simpliciale 1D con
 %    \includegraphics[scale = 0.3]{images/cobordo.jpg}
 %\end{figure}
 
-Aggiungere la formalizzazione del cobordo e del bordo tramite gli operatori, ridefinizione della divergenza con il cobordo del vertice
-	
 \begin{prop}
     The use of the coboundary operator makes sense only with antisimmetric functions on the edges, the antisimmetry of
     those function is somehow related to the orientation of surfaces.
@@ -108,16 +106,17 @@ Aggiungere la formalizzazione del cobordo e del bordo tramite gli operatori, rid
     is parallel to $2x$ with is the gradient of the implicit function defining the ball.
 \end{prop}
 
-	Possibili approfondimenti interessanti:\\
-	(i)   Studio di equazioni differenziali sui grafi con gli operatori sopra definiti\\
-	      -Equazione del Calore\\
-	      $\frac{d(f_i)}{dt} = -c(\Delta f)_i$\\
-	      -Equazione di Schr$\ddot{o}$dinger\\
-	      $\frac{d(f_i)}{dt} = -c(\Delta f)_i + U_i f_i$\\
-	      -Equazione di Navier-Stokes\\
-	      -Equazione di continuità\\
-	      -altre\\
-	(ii)  Vincolare l'apprendimento di funzioni a divergenza nulla delle edge tramite $H^0$, eventuale applicazione a flussi incomprimibili\\
-	(iii) Definire il rotore per 2-simplessi e fare l'analogo con $H_1$, eventuale applicazione a reti elettriche tridimensionali\\
-
+%	Possibili approfondimenti interessanti:\\
+%	(i)   Studio di equazioni differenziali sui grafi con gli operatori sopra definiti\\
+%	      -Equazione del Calore\\
+%	      $\frac{d(f_i)}{dt} = -c(\Delta f)_i$\\
+%	      -Equazione di Schr$\ddot{o}$dinger\\
+%	      $\frac{d(f_i)}{dt} = -c(\Delta f)_i + U_i f_i$\\
+%	      -Equazione di Navier-Stokes\\
+%	      -Equazione di continuità\\
+%	      -altre\\
+%	(ii)  Vincolare l'apprendimento di funzioni a divergenza nulla delle edge tramite $H^0$, eventuale applicazione a flussi incomprimibili\\
+%	(iii) Definire il rotore per 2-simplessi e fare l'analogo con $H_1$, eventuale applicazione a reti elettriche tridimensionali\\
+%        (iv)  Aggiungere la formalizzazione del cobordo e del bordo tramite gli operatori, ridefinizione della divergenza con il cobordo del vertice
+%	(v)   Migliorare la formalizzazione dell'integrale sul percorso ed il teorema del gradiente
 \end{document}
