commento sul teorema del gradiente

--- a/sections/section2.tex
+++ b/sections/section2.tex
@@ -57,7 +57,8 @@
     Left to the reader...
 \end{proof}
 
-%In realtà se avessi la certezza che il bordo di un complesso simpliciale 1D connesso è vuoto o due punti starei meglio, esiste un teorema? boh
+%In realtà se avessi la certezza che il bordo di un complesso simpliciale 1D connesso è vuoto o due punti starei meglio, esiste un teorema?
+%Ma in realta se faccio bordo(sum[a_i,a_i+1]) ottendo a_0+a_n che è l'unica catena generatrice del gruppo dei cicli omeomorfo a Z_2
 
 \begin{thm}
     \underline{Gauss theorem on graphs}\\
@@ -118,5 +119,5 @@
 %	(ii)  Vincolare l'apprendimento di funzioni a divergenza nulla delle edge tramite $H^0$, eventuale applicazione a flussi incomprimibili\\
 %	(iii) Definire il rotore per 2-simplessi e fare l'analogo con $H_1$, eventuale applicazione a reti elettriche tridimensionali\\
 %        (iv)  Aggiungere la formalizzazione del cobordo e del bordo tramite gli operatori, ridefinizione della divergenza con il cobordo del vertice
-%	(v)   Migliorare la formalizzazione dell'integrale sul percorso ed il teorema del gradiente
+%	(v)   Migliorare la formalizzazione dell'integrale sul percorso(da formalizzare come catena) ed il teorema del gradiente
 \end{document}
