commento sul teorema del gradiente

--- a/sections/section3.tex
+++ b/sections/section3.tex
@@ -8,7 +8,7 @@
     to avoid uniformly vanishing functions i.e. $\int_M dx f^2 = 1$ we get as solution the eigenfunction of the laplacian
     relative to its lowest eigenvalue. After this the same process can be applied to graphs.
 \end{prop}
-\begin{proof} The proof is splitted in two different problems:
+\begin{proof} The proof is split in two different problems:
     \begin{itemize}
         \item 
 	$\int f \Delta f = \int (gradf)^2$, the problem $\delta \int (gradf)^2 = 0$ is solved with the
