--- a/sections/section3.tex
+++ b/sections/section3.tex
@@ -41,6 +41,21 @@
    \end{itemize}
 \end{proof}
 
+\begin{prop}
+    \underline{Continuous spectrum of the laplacian in $\R^3$}\\
+    Let $f \in L^2(\Omega)$, in particular in a Schwartz space where the Fourier Transform is invertible and selfadjoint,
+    then we have that $\Delta \phi_p = p^2 \phi_p$, where $\forall f \in L^2$ we can write $f = \int_\Omega dp c_p \phi_p$
+    and $\int_\Omega dx \phi_p \phi_{p'} = \delta(p-p')$, that is generalized Hilbert Base up to normalization.
+\end{prop}
+\begin{proof}:\\
+    So if the Fourier transform is invertible we have that $f(x') = \int_\Omega dp e^{i\scal{x'}{p}}\int_\Omega dx e^{-i\scal{x}{p}}f(x)$, 
+    then by the definition of the shift functional we can represent it with its integral kernel $\int_\Omega dp e^{i\scal{x'-x}{p}}$, which
+    is equal to $\delta(x-x') = \delta(x'-x)$. Trivially we have that our laplacian eigenfunctions are $\phi_p = e^{i\scal{x}{p}}$ of eigenvalue $p^2$, since 
+    $f(x) = \mc{F}^\dag \mc{F} = \int_\Omega dp (\mc{F}f)(p)e^{i\scal{x}{p}}$ we define our coefficients $c_p$. We just have to show that
+    $\int dx e^{i\scal{x}{p'-p}} = \delta(p'-p)$ that is true by definition.
+\end{proof}
+    
+
 % Secondo me la dimsotrazione con la Traccia è molto brutta
 % Aggiungere le condizioni al contorno per il problema variazionale continuo(Fomin)
 
