--- a/sections/section2.tex
+++ b/sections/section2.tex
@@ -118,6 +118,7 @@
 %	      -altre\\
 %	(ii)  Vincolare l'apprendimento di funzioni a divergenza nulla delle edge tramite $H^0$, eventuale applicazione a flussi incomprimibili\\
 %	(iii) Definire il rotore per 2-simplessi e fare l'analogo con $H_1$, eventuale applicazione a reti elettriche tridimensionali\\
-%        (iv)  Aggiungere la formalizzazione del cobordo e del bordo tramite gli operatori, ridefinizione della divergenza con il cobordo del vertice
+%       (iv)  Aggiungere la formalizzazione del cobordo e del bordo tramite gli operatori, ridefinizione della divergenza con il cobordo del vertice
 %	(v)   Migliorare la formalizzazione dell'integrale sul percorso(da formalizzare come catena) ed il teorema del gradiente
+%       (vi)  Coomologia di de Rahm per i grafi, bordo come aggiunto della derivata esterna
 \end{document}
