--- a/sections/section2.tex
+++ b/sections/section2.tex
@@ -105,6 +105,7 @@
     B is a ball centered in 0 (or at least has a boundary), we have that $ f(0)-\frac{\int_{\partial B} dx f(x) f}{\int_{\partial B} dx}
     \simeq \frac{\int_B dx \Delta f}{\int_{\partial B} dx}$. Gauss theorem could be used since the incremental vector $x$ on a ball
     is parallel to $2x$ with is the gradient of the implicit function defining the ball.
+    % La parte (ii) è molto brutta ma Francesco l'ha fatta bene
 \end{prop}
 
 %	Possibili approfondimenti interessanti:\\
