--- a/sections/section3.tex
+++ b/sections/section3.tex
@@ -21,7 +21,7 @@
 \end{proof}
 
 \begin{prop}
-    \underline{Discrete "variational" problems related to the laplacian}\\
+    \underline{Discrete optimization problems related to the laplacian}\\
     Let $\phi$ be an $k \times k$ matrix, the variational problem minimizing the Dirichlet energy $Tr(\phi^T \Delta \phi)$ is equivalent to
     the problem $\Delta \phi = 0$, while if we normalize the functions we get $\Delta \phi = \Lambda \phi$, where $\Lambda = diag(\lambda)$ with 
     the k lowest eigenvalues.
@@ -54,6 +54,11 @@
     $f(x) = \mc{F}^\dag \mc{F}f = \int_\Omega dp (\mc{F}f)(p)e^{i\scal{x}{p}}$ we define our coefficients $c_p$. We just have to show that
     $\int dx e^{i\scal{x}{p'-p}} = \delta(p'-p)$ that is true by definition.\\
 \end{proof}
+
+\begin{prop}
+    \underline{The heat kernel is a really well behaved local function}\\
+    
+\end{prop}
     
 
 % Secondo me la dimsotrazione con la Traccia è molto brutta
