--- a/tesi/main.tex
+++ b/tesi/main.tex
@@ -1,6 +1,10 @@
-\documentclass{article}
-\usepackage[utf8]{inputenc}
-\usepackage{fouriernc}
+\documentclass[12pt,a4paper]{report}
+\usepackage[english]{babel}
+\usepackage{newlfont}
+\usepackage{color}
+\textwidth=450pt\oddsidemargin=0pt
+%\usepackage[utf8]{inputenc}
+%\usepackage{fouriernc}
 \usepackage[T1]{fontenc}
 \usepackage{adjustbox}
 \usepackage[margin=2cm]{geometry}
@@ -10,7 +14,7 @@
 \usepackage{amsthm}
 \usepackage{amssymb}
 \usepackage{mathtools}
-\hypersetup{colorlinks=true,linkcolor=blue,urlcolor=red}
+\hypersetup{colorlinks=true,linkcolor=blue,urlcolor=BLACK}
 \usepackage{subfiles}
 
 \setlength{\parindent}{0pt}
@@ -36,24 +40,41 @@
 \newcommand{\mc}[1]{\mathcal{#1}}
 \newcommand{\scal}[2]{\langle #1, #2 \rangle}
 
-\title{Geometric Deep Learning \\ Beyond Euclidean Domains}
-\author{}
-\date{}
 \begin{document}
 
-\tableofcontents
-\maketitle
-
-\begin{section}{Geometric Priors}
-    \subfile{sections/section1}
-\end{section}
-
-\begin{section}{Graphs and Manifolds}
-    \subfile{sections/section2}
-\end{section}
-
-\begin{section}{Spectrum of the laplacian}
-    \subfile{sections/section3}
-\end{section}
+\begin{titlepage}
+   \begin{center}
+        {{\Large{\textsc{Alma Mater Studiorum $\cdot$ Universit\`a di Bologna}}}} 
+        \rule[0.1cm]{15.8cm}{0.1mm}
+        \rule[0.5cm]{15.8cm}{0.6mm}
+        \\\vspace{3mm}
+        {\small{\bf Scuola di Scienze \\ 
+        Dipartimento di Fisica e Astronomia\\
+        Corso di Laurea in Fisica}}
+    \end{center}
+    \vspace{23mm}
+    \begin{center}
+        {{\LARGE{\bf TITOLO TESI}}\\}
+    \end{center}
+    \vspace{50mm} \par \noindent
+    \begin{minipage}[t]{0.47\textwidth}
+        {\large{\bf Relatore: \vspace{2mm}\\
+        Prof.ssa. Rita Fioresi\\\\
+        %\bf Correlatore: (eventuale)
+        %\vspace{2mm}\\
+        %Prof./Dott. Nome Cognome\\\\
+        }}
+    \end{minipage}
+    \hfill
+    \begin{minipage}[t]{0.47\textwidth}\raggedleft
+        {\large{\bf Presentata da:
+        \vspace{2mm}\\
+        Tommaso Lamma}}
+    \end{minipage}
+    \vspace{40mm}
+    \begin{center}
+        Anno Accademico 2020/2021
+    \end{center}
+\end{titlepage}
 
 \end{document}
