--- a/tesi/main.tex
+++ b/tesi/main.tex
@@ -77,4 +77,17 @@
     \end{center}
 \end{titlepage}
 
+\tableofcontents
+
+\begin{section}{Introduction}
+    \begin{subsection}{Abstract simplicial complexes}
+    \end{subsection}
+    \begin{subsection}{Differential forms on abstract simplicial complexes}
+    \end{subsection}
+    \begin{subsection}{Integration on simplicial chains}
+    \end{subsection}
+    \begin{subsection}{Smooth real manifolds and abstract graphs}
+    \end{subsection}
+\end{section}
+
 \end{document}
