--- a/tesi/main.tex
+++ b/tesi/main.tex
@@ -79,15 +79,15 @@
 
 \tableofcontents
 
-\begin{section}{Introduction}
-    \begin{subsection}{Abstract simplicial complexes}
-    \end{subsection}
-    \begin{subsection}{Differential forms on abstract simplicial complexes}
-    \end{subsection}
-    \begin{subsection}{Integration on simplicial chains}
-    \end{subsection}
-    \begin{subsection}{Smooth real manifolds and abstract graphs}
-    \end{subsection}
-\end{section}
+\begin{chapter}{Introduction}
+    \begin{section}{Abstract simplicial complexes}
+    \end{section}
+    \begin{section}{Differential forms on abstract simplicial complexes}
+    \end{section}
+    \begin{section}{Integration on simplicial chains}
+    \end{section}
+    \begin{section}{Smooth real manifolds and abstract graphs}
+    \end{section}
+\end{chapter}
 
 \end{document}
