--- a/tesi/main.tex
+++ b/tesi/main.tex
@@ -77,8 +77,18 @@
     \end{center}
 \end{titlepage}
 
+\pagenumbering{roman}{1}
+
+\begin{center}
+    {\Large Abstract}\\
+\end{center}
+
+\newpage
+
 \addcontentsline{toc}{chapter}{Contents}
 \tableofcontents
+
+\pagenumbering{alph}{1}
 
 \begin{chapter}{Introduction}
     \begin{section}{Abstract simplicial complexes}
