--- a/tesi/main.tex
+++ b/tesi/main.tex
@@ -77,7 +77,7 @@
     \end{center}
 \end{titlepage}
 
-\pagenumbering{roman}{1}
+\pagenumbering{roman}
 
 \begin{center}
     {\Large Abstract}\\
@@ -88,7 +88,7 @@
 \addcontentsline{toc}{chapter}{Contents}
 \tableofcontents
 
-\pagenumbering{alph}{1}
+\pagenumbering{arabic}
 
 \begin{chapter}{Introduction}
     \begin{section}{Abstract simplicial complexes}
