--- a/tesi/main.tex
+++ b/tesi/main.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt,a4paper]{report}
+\documentclass[12pt,a4paper]{article}
 \usepackage[english]{babel}
 \usepackage{newlfont}
 \usepackage{color}
@@ -87,18 +87,17 @@
 
 \pagenumbering{arabic}
 
-\addcontentsline{toc}{chapter}{Contents}
 \tableofcontents
 
-\begin{chapter}{Introduction}
-    \begin{section}{Abstract simplicial complexes}
-    \end{section}
-    \begin{section}{Differential forms on abstract simplicial complexes}
-    \end{section}
-    \begin{section}{Integration on simplicial chains}
-    \end{section}
-    \begin{section}{Smooth real manifolds and abstract graphs}
-    \end{section}
-\end{chapter}
+\begin{section}{Introduction}
+    \begin{subsection}{Abstract simplicial complexes}
+    \end{subsection}
+    \begin{subsection}{Differential forms on abstract simplicial complexes}
+    \end{subsection}
+    \begin{subsection}{Integration on simplicial chains}
+    \end{subsection}
+    \begin{subsection}{Smooth real manifolds and abstract graphs}
+    \end{subsection}
+\end{section}
 
 \end{document}
