--- a/tesi/main.tex
+++ b/tesi/main.tex
@@ -91,12 +91,16 @@
 
 \begin{section}{Introduction}
     \begin{subsection}{Abstract simplicial complexes}
+    contents
     \end{subsection}
     \begin{subsection}{Differential forms on abstract simplicial complexes}
+    contents
     \end{subsection}
     \begin{subsection}{Integration on simplicial chains}
+    contents
     \end{subsection}
     \begin{subsection}{Smooth real manifolds and abstract graphs}
+    contents
     \end{subsection}
 \end{section}
 
