--- a/tesi/main.tex
+++ b/tesi/main.tex
@@ -82,13 +82,10 @@
 \begin{center}
     {\Large Abstract}\\
 \end{center}
-
 \newpage
-
-\pagenumbering{arabic}
-
 \tableofcontents
-
+\newpage
+\pagenumbering{arabic}
 \begin{section}{Introduction}
     \begin{subsection}{Abstract simplicial complexes}
     contents
