--- a/tesi/main.tex
+++ b/tesi/main.tex
@@ -41,64 +41,18 @@
 \newcommand{\scal}[2]{\langle #1, #2 \rangle}
 
 \begin{document}
-
 \begin{titlepage}
-   \begin{center}
-        {{\Large{\textsc{Alma Mater Studiorum $\cdot$ Universit\`a di Bologna}}}} 
-        \rule[0.1cm]{15.8cm}{0.1mm}
-        \rule[0.5cm]{15.8cm}{0.6mm}
-        \\\vspace{3mm}
-        {\small{\bf Scuola di Scienze \\ 
-        Dipartimento di Fisica e Astronomia\\
-        Corso di Laurea in Fisica}}
-    \end{center}
-    \vspace{23mm}
-    \begin{center}
-        {{\LARGE{\bf TITOLO TESI}}\\}
-    \end{center}
-    \vspace{50mm} \par \noindent
-    \begin{minipage}[t]{0.47\textwidth}
-        {\large{\bf Relatore: \vspace{2mm}\\
-        Prof.ssa. Rita Fioresi\\\\
-        %\bf Correlatore: (eventuale)
-        %\vspace{2mm}\\
-        %Prof./Dott. Nome Cognome\\\\
-        }}
-    \end{minipage}
-    \hfill
-    \begin{minipage}[t]{0.47\textwidth}\raggedleft
-        {\large{\bf Presentata da:
-        \vspace{2mm}\\
-        Tommaso Lamma}}
-    \end{minipage}
-    \vspace{40mm}
-    \begin{center}
-        Anno Accademico 2020/2021
-    \end{center}
+    \subfie{sections/front}
 \end{titlepage}
-
 \pagenumbering{roman}
-
-\begin{center}
-    {\Large Abstract}\\
-\end{center}
+\subfile{sections/abstract_ita}
+\newpage
+\subfile{sections/abstract_eng}
 \newpage
 \tableofcontents
 \newpage
 \pagenumbering{arabic}
 \begin{section}{Introduction}
-    \begin{subsection}{Abstract simplicial complexes}
-    contents
-    \end{subsection}
-    \begin{subsection}{Differential forms on abstract simplicial complexes}
-    contents
-    \end{subsection}
-    \begin{subsection}{Integration on simplicial chains}
-    contents
-    \end{subsection}
-    \begin{subsection}{Smooth real manifolds and abstract graphs}
-    contents
-    \end{subsection}
+    \subfile{section/1}
 \end{section}
-
 \end{document}
