--- a/tesi/main.tex
+++ b/tesi/main.tex
@@ -42,7 +42,7 @@
 
 \begin{document}
 \begin{titlepage}
-    \subfie{sections/front}
+    \subfile{sections/front}
 \end{titlepage}
 \pagenumbering{roman}
 \subfile{sections/abstract_ita}
@@ -53,6 +53,6 @@
 \newpage
 \pagenumbering{arabic}
 \begin{section}{Introduction}
-    \subfile{section/1}
+    \subfile{sections/1}
 \end{section}
 \end{document}
