--- a/tesi/main.tex
+++ b/tesi/main.tex
@@ -23,7 +23,7 @@
 \newtheorem*{thm*}{Theorem}
 \newtheorem{prop}[thm]{Proposition}
 \newtheorem*{prop*}{Proposition}
-\newtheorem{defn}{Definition}[section]
+\newtheorem{defn}{Definition}[subsection]
 \newtheorem*{defn*}{Definition}
 \newtheorem{lem}[thm]{Lemma}
 \newtheorem{cor}{Corollary}[thm]
