--- a/tesi/sections/1.tex
+++ b/tesi/sections/1.tex
@@ -13,4 +13,7 @@
 \begin{subsection}{Smooth real manifolds and abstract graphs}
     \subfile{sections/1/4}
 \end{subsection}
+\begin{subsection}{Convolutional neural networks on euclidean domains}
+    \subfile{sections/1/5}
+\end{subsection}
 \end{document}
