--- a/tesi/main.tex
+++ b/tesi/main.tex
@@ -14,12 +14,13 @@
 \usepackage{amsthm}
 \usepackage{amssymb}
 \usepackage{mathtools}
-\hypersetup{colorlinks=true,linkcolor=blue,urlcolor=BLACK}
+\hypersetup{colorlinks=true,linkcolor=black,urlcolor=black}
 \usepackage{subfiles}
+\usepackage{comment}
 
 \setlength{\parindent}{0pt}
 
-\newtheorem{thm}{Theorem}[section]
+\newtheorem{thm}{Theorem}[subsection]
 \newtheorem*{thm*}{Theorem}
 \newtheorem{prop}[thm]{Proposition}
 \newtheorem*{prop*}{Proposition}
