--- a/tesi/sections/1.tex
+++ b/tesi/sections/1.tex
@@ -4,6 +4,7 @@
 \begin{subsection}{Abstract simplicial complexes}
     \subfile{sections/1/1}    
 \end{subsection}
+\begin{comment}
 \begin{subsection}{Differential forms on abstract simplicial complexes}
     \subfile{sections/1/2}    
 \end{subsection}
@@ -16,4 +17,5 @@
 \begin{subsection}{Convolutional neural networks on euclidean domains}
     \subfile{sections/1/5}
 \end{subsection}
+\end{comment}
 \end{document}
