--- a/tesi/main.tex
+++ b/tesi/main.tex
@@ -17,6 +17,7 @@
 \hypersetup{colorlinks=true,linkcolor=black,urlcolor=black}
 \usepackage{subfiles}
 \usepackage{comment}
+\usepackage{enumerate}
 
 \setlength{\parindent}{0pt}
 
