--- a/tesi/sections/1/1.tex
+++ b/tesi/sections/1/1.tex
@@ -8,34 +8,50 @@
     \end{defn}
     \begin{defn}
         \bb{Dimension of an abstract simplicial complex}\\
-	Let $\mc{A} = \{\sigma_j\}_{j \in J}$ be an abstract simplicial complex we define its dimension to be
-	\[ dim \mc{A} := max_{\sigma_j \in \mc{A}}dim(\sigma_j), \]
-	where $dim(\sigma_j) := |\sigma_j|-1$.
+	Let $\mc{A}$ be an abstract simplicial complex we define its dimension to be
+	\[ dim \mc{A} := max_{\sigma \in \mc{A}}dim(\sigma), \]
+	where $dim(\sigma) := |\sigma|-1$.
     \end{defn}
     \begin{defn}
         \bb{Abstract graph}\\
-	An abstract graph $\mc{G} = \{\sigma_j\}_{j \in J}$ is a 1-dimensional abstract simplicial complex whose 
+	An abstract graph $\mc{G}$ is a 1-dimensional abstract simplicial complex whose 
 	vertexes and edges are respectively
-	\[ \mc{V} := \{ \sigma_j \in \mc{G} : dim(\sigma_j) = 0\} \ and \]
-	\[ \mc{E} := \{ \sigma_j \in \mc{G} : dim(\sigma_j) = 1\} \ .\]
+	\[ \mc{V} := \{ \sigma \in \mc{G} : dim(\sigma) = 0\} \ and \]
+	\[ \mc{E} := \{ \sigma \in \mc{G} : dim(\sigma) = 1\} \ .\]
     \end{defn}
-    In Definition 1.1.1. we tacitly assumed the definition of the abstract simplex $\sigma_j$ invariant
-    with respect to permutations of the indexes $I_j$, this assumption establishes the difference between
+    In Definition 1.1.1. we tacitly assumed the definition of the abstract simplex $\sigma$ invariant
+    with respect to permutations of the indexes $I_\sigma$, this assumption establishes the difference between
     directed and undirected graphs.
     \begin{defn}
         \bb{Convex envelop of points in $\R^n$}\\
-        Let $\{x_i\}_{i \in I} \subset \R^n$ we define the convex envelope of $\{x_i\}_{i \in I}$ to be 
+        Let $I$ be a finite set of indexes, we define the convex envelope of $\{x_i\}_{i \in I} \subset \R^n$ to be 
         \[ \langle x_i \rangle_{i \in I} := \{ a = \sum_{i \in I} \lambda_i x_i : \lambda_i \in \R,\ \lambda_i > 0,\  \sum_{i \in I} \lambda_i = 1 \},\]
         which is the smallest convex set containing $\{x_i\}_{i \in I}$.
     \end{defn}
     \begin{defn}
         \bb{Affine independency of points in $\R^n$}\\
+        Let $\{x_i\}_{i \in I} \subset \R^n$ we define $\{x_i\}_{i \in I}$ to be affinely independent if and only if
+        \[ \sum_{i \in I} \lambda_i x_i = \sum_{i \in I} \mu_i x_i \quad \Rightarrow \quad 
+        \lambda_i = \mu_i \; \forall i \in I ,\]
+        where $\sum_{i \in I} \lambda_i = \sum_{i \in I} \mu_i = 1$.
     \end{defn}
     \begin{defn}
         \bb{Geometric k-simplexes}\\
+        We define a geometric k-simplex to be a convex envelop $\langle x_i \rangle_{i \in I}$
+        where $\{x_i\}_{i \in I} \subset \R^n$ are affinely independent and $|I| = k + 1$.
+    \end{defn}
+    \begin{defn}
+        \bb{Faces and cofaces of geometric k-simplexes}\\
+        %We define a geometric k-simplex to be a convex envelop $\langle x_i \rangle_{i \in I}$
+        %where $\{x_i\}_{i \in I} \subset \R^n$ are affinely independent and $|I| = k + 1$.
     \end{defn}
     \begin{defn}
         \bb{Geometric Simplicial Complex}\\
+        We define a geometric simplicial complex $\mc{K}$ to be a collection of geometric simplexes such that
+        \begin{enumerate}[(i)]
+            \item $ \tau \leq \sigma \in \mc{K} \Rightarrow \tau \in \mc{K} $
+            \item $ \sigma, \tau \in \mc{K} \Rightarrow \sigma \cup \tau \in \mc{K}  $
+        \end{enumerate}
     \end{defn}
     \begin{thm}
         \bb{Geometric realization of an abstract simplicial complex}\\
